{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 111,
  "lineage": "8c2656cc-1cad-247e-8bb1-630b4ef4d6bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "christanyk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ace34e9f53c91c5d",
            "arn": "arn:aws:ec2:us-east-1:255945442255:instance/i-0d085b885e54d751e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d085b885e54d751e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "christanyk",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a218dfbd733ca58b",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-34-200-247-41.compute-1.amazonaws.com",
            "public_ip": "34.200.247.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb7d782c89e06731",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e19447e300fc3688",
            "tags": {
              "Name": "christanyk"
            },
            "tags_all": {
              "Name": "christanyk"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eadf23947489b60e"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_access",
            "aws_subnet.christanyk_subnet",
            "aws_vpc.christanyk_vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "christanyk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:internet-gateway/igw-02daac8be8d8e88e2",
            "id": "igw-02daac8be8d8e88e2",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanyk-igw"
            },
            "tags_all": {
              "Name": "christanyk-igw"
            },
            "vpc_id": "vpc-0e4839d7ab7e9559d"
          },
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "christanyk_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02daac8be8d8e88e2",
            "id": "r-rtb-0c444cd4b0a88cfa51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c444cd4b0a88cfa5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.christanyk_igw",
            "aws_route_table.christanyk_rt",
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "christanyk_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:route-table/rtb-0c444cd4b0a88cfa5",
            "id": "rtb-0c444cd4b0a88cfa5",
            "owner_id": "255945442255",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4839d7ab7e9559d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "christanyk_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c639b0338f0fa62a",
            "route_table_id": "rtb-0c444cd4b0a88cfa5",
            "subnet_id": "subnet-0e19447e300fc3688"
          },
          "dependencies": [
            "aws_route_table.christanyk_rt",
            "aws_subnet.christanyk_subnet",
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:security-group/sg-0eadf23947489b60e",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eadf23947489b60e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "christanyk-ssh-access",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e4839d7ab7e9559d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "christanyk_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:subnet/subnet-0e19447e300fc3688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e19447e300fc3688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e4839d7ab7e9559d"
          },
          "dependencies": [
            "aws_vpc.christanyk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "christanyk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:255945442255:vpc/vpc-0e4839d7ab7e9559d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b765418ce09548b7",
            "default_route_table_id": "rtb-01c564125d5516ea0",
            "default_security_group_id": "sg-0270b87db88e7f17d",
            "dhcp_options_id": "dopt-00230c43c6dec6359",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4839d7ab7e9559d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c564125d5516ea0",
            "owner_id": "255945442255",
            "tags": {
              "Name": "christanyk-vpc"
            },
            "tags_all": {
              "Name": "christanyk-vpc"
            }
          }
        }
      ]
    }
  ]
}